--- a/skeletor/gameshop/templates/gameshop/index.html
+++ b/skeletor/gameshop/templates/gameshop/index.html
@@ -1,1 +1,24 @@
+
 {% extends "base.html" %}
+{% load staticfiles %}
+
+{% block title %}
+    index page
+{% endblock %}
+
+{% block header %}
+    {% include "menu.html" %}
+{% endblock %}
+
+{% block content %}
+    <!-- First Container -->
+	<div class="container-fluid bg-1 text-center">
+    
+    <img src="{% static 'imgs/Skeletor.png' %}" class="img-responsive img-circle margin" style="display:inline" alt="Skeletor" width="350" height="350">
+  
+</div>
+{% endblock %}
+
+{% block footer %}
+    {% include "footer.html" %}
+{% endblock %}
