include login on index

--- a/skeletor/gameshop/templates/base.html
+++ b/skeletor/gameshop/templates/base.html
@@ -20,18 +20,10 @@
             p {font-size: 16px;}
             .margin {margin-bottom: 45px;}
             .bg-1 { 
-              background-color: #000000; /* Green */
+              background-color: #ffffff; /* Black */
               color: #ffffff;
             }
             .bg-2 { 
-              background-color: #474e5d; /* Dark Blue */
-              color: #ffffff;
-            }
-            .bg-3 { 
-              background-color: #ffffff; /* White */
-              color: #555555;
-            }
-            .bg-4 { 
               background-color: #2f2f2f; /* Black Gray */
               color: #fff;
             }
@@ -55,13 +47,10 @@
     </head>
     <body>
         {% block header %}
-        Override this with <code>block content</code> in other templates.
         {% endblock %}
         {% block content %}
-        Override this with <code>block content</code> in other templates.
         {% endblock %}
         {% block footer %}
-        Override this with <code>block content</code> in other templates.
         {% endblock %}
     </body>
 </html>
