--- a/skeletor/gameshop/templates/menu.html
+++ b/skeletor/gameshop/templates/menu.html
@@ -1,5 +1,3 @@
-
-<!-- Navbar -->
 <nav class="navbar navbar-default">
   <div class="container">
     <div class="navbar-header">
@@ -14,6 +12,9 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">PLAY</a></li>
         <li><a href="#">GAME SHOP</a></li>
+        {%if user %}
+          <li><a href="#">MY GAMES</a></li>
+        {% endif %}
       </ul>
     </div>
   </div>
