login/logout problems

--- a/skeletor/gameshop/templates/menu.html
+++ b/skeletor/gameshop/templates/menu.html
@@ -14,6 +14,7 @@
         <li><a href="#">GAME SHOP</a></li>
         {%if user %}
           <li><a href="#">MY GAMES</a></li>
+          <li><a href="{% url 'logout' %}?next=/">LOGOUT</a></li>
         {% endif %}
       </ul>
     </div>
