--- a/skeletor/gameshop/templates/base.html
+++ b/skeletor/gameshop/templates/base.html
@@ -20,7 +20,7 @@
             p {font-size: 16px;}
             .margin {margin-bottom: 45px;}
             .bg-1 { 
-              background-color: #ffffff; /* Black */
+              background-color: #000000; /* Black */
               color: #ffffff;
             }
             .bg-2 { 
