--- a/skeletor/gameshop/templates/menu.html
+++ b/skeletor/gameshop/templates/menu.html
@@ -6,14 +6,14 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                       
       </button>
-      <a class="navbar-brand" href="#">SKELETOR GAMESHOP</a>
+      <a class="navbar-brand" href="/">SKELETOR GAMESHOP</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">PLAY</a></li>
-        <li><a href="#">GAME SHOP</a></li>
+        <li><a href="/play">PLAY</a></li>
+        <li><a href="/shop">GAME SHOP</a></li>
         {%if user %}
-          <li><a href="#">MY GAMES</a></li>
+          <li><a href="/profile">PROFILE</a></li>
           <li><a href="{% url 'logout' %}?next=/">LOGOUT</a></li>
         {% endif %}
       </ul>
