css modification of form

--- a/skeletor/gameshop/templates/registration/login.html
+++ b/skeletor/gameshop/templates/registration/login.html
@@ -13,33 +13,36 @@
     {% endif %}
 {% endif %}
 
-<div id="login">
+<div id="login" style="background-color:rgba(255, 255, 255, 0.2);padding:20px;">
         <form class="form-horizontal" name="LoginForm" action="/login/" method="post">
         {% csrf_token %}
         {% if next %}
             <input type="hidden" name="next" value="{{ next }}" />
         {% endif %}
+
         <div class="control-group">
             <label class="control-label" for="username">Username</label>
-            <div class="controls">
+            <div class="controls" style="color:black;">
                 <input type="text" id="username" name="username"  placeholder="Username">
             </div>
         </div>
         <div class="control-group">
             <label class="control-label" for="password">Password</label>
-            <div class="controls">
+            <div class="controls" style="color:black;">
                 <input type="password" name="password" id="password" placeholder="Password">
             </div>
         </div>
-        <div class="control-group">
+        <div class="control-group" style="padding:10px;">
             <div class="controls">
                 <button type="submit" class="btn">Login</button>
             </div>
         </div>
         </form>
-    </div>
-
-{# Assumes you setup the password_reset view in your URLconf #}
+        {# Assumes you setup the password_reset view in your URLconf #}
 <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
+<p><a href="/register">Registeration</p>
+</div>
+
+
 
 
