--- a/skeletor/gameshop/templates/gameshop/register.html
+++ b/skeletor/gameshop/templates/gameshop/register.html
@@ -8,7 +8,11 @@
 {% block content %}
     <!-- First Container -->
     
-	<div class="container-fluid bg-1 text-center">
-  
+	<div class="container-fluid bg-1 text-center" style="color:red;">
+        <form action="/register" method="post">
+        {% csrf_token %}
+        {{ form.as_ul }}
+        <input type="submit" value="Submit" />
+        </form>  
 	</div>
 {% endblock %}
