--- a/skeletor/gameshop/templates/registration/login.html
+++ b/skeletor/gameshop/templates/registration/login.html
@@ -40,7 +40,7 @@
         </form>
         {# Assumes you setup the password_reset view in your URLconf #}
 <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
-<p><a href="/register">Registeration</p>
+<p><a href="/register">Registeration</a></p>
 </div>
 
 
