--- a/skeletor/gameshop/templates/base.html
+++ b/skeletor/gameshop/templates/base.html
@@ -40,6 +40,9 @@
               font-size: 12px;
               letter-spacing: 5px;
             }
+            .controls{
+              color:black;
+            }
             
         </style>
         {% block head %}
