--- a/skeletor/gameshop/templates/gameshop/index.html
+++ b/skeletor/gameshop/templates/gameshop/index.html
@@ -6,6 +6,10 @@
     index page
 {% endblock %}
 
+{% block navigation %}
+{% include "navigation.html" %}
+{% endblock %}
+
 {% block content %}
     <!-- First Container -->
     
