--- a/skeletor/gameshop/templates/gameshop/play.html
+++ b/skeletor/gameshop/templates/gameshop/play.html
@@ -5,15 +5,10 @@
 {% block title %}
 {% endblock %}
 
+{% block navigation %}
+{% include "navigation.html" %}
+{% endblock %}
+
 {% block content %}
-    <!-- First Container -->
-    
-	<div class="container-fluid bg-1 text-center">
-    	
-    	<img src="{% static 'imgs/Skeletor.png' %}" class="img-responsive img-circle margin" style="display:inline" alt="Skeletor" width="300" height="300">
-    	{% if not user %}
-    		{% include "registration/login.html" %}
-		{% endif %}
-  
-	</div>
+<i> PLAY </i>
 {% endblock %}
