--- a/skeletor/gameshop/templates/gameshop/profile.html
+++ b/skeletor/gameshop/templates/gameshop/profile.html
@@ -4,5 +4,9 @@
 {% block title %}
 {% endblock %}
 
+{% block navigation %}
+{% include "navigation.html" %}
+{% endblock %}
+
 {% block content %}
 {% endblock %}
