--- a/skeletor/gameshop/templates/gameshop/register.html
+++ b/skeletor/gameshop/templates/gameshop/register.html
@@ -5,6 +5,10 @@
 {% block title %}
 {% endblock %}
 
+{% block navigation %}
+{% include "navigation.html" %}
+{% endblock %}
+
 {% block content %}
     <!-- First Container -->
     
