--- a/skeletor/gameshop/templates/gameshop/shop.html
+++ b/skeletor/gameshop/templates/gameshop/shop.html
@@ -4,5 +4,10 @@
 {% block title %}
 {% endblock %}
 
+{% block navigation %}
+{% include "navigation.html" %}
+{% endblock %}
+
 {% block content %}
+<p>SHOP</p>
 {% endblock %}
