--- a/skeletor/gameshop/templates/gameshop/profile.html
+++ b/skeletor/gameshop/templates/gameshop/profile.html
@@ -9,4 +9,20 @@
 {% endblock %}
 
 {% block content %}
+<div class="container-fluid bg-1 text-center">
+    <table>
+        <tr>
+            <td>First name</td>
+            <td>{{ user.first_name }}</td>
+        </tr>
+        <tr>
+            <td>Last name</td>
+            <td>{{ user.last_name }}</td>
+        </tr>
+        <tr>
+            <td>Email</td>
+            <td>{{ user.email }}</td>
+        </tr>
+    </table>
+</div>
 {% endblock %}
