--- a/skeletor/gameshop/templates/navigation.html
+++ b/skeletor/gameshop/templates/navigation.html
@@ -12,7 +12,7 @@
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="/shop">GAME SHOP</a></li>
-          {%if user %}
+          {%if user.is_authenticated %}
             <li><a href="/play">PLAY</a></li>
             <li><a href="/profile">PROFILE</a></li>
             <li><a href="{% url 'logout' %}?next=/">LOGOUT</a></li>
