--- a/skeletor/gameshop/templates/gameshop/index.html
+++ b/skeletor/gameshop/templates/gameshop/index.html
@@ -1,4 +1,3 @@
-
 {% extends "base.html" %}
 {% load staticfiles %}
 
@@ -12,13 +11,10 @@
 
 {% block content %}
     <!-- First Container -->
-    
-	<div class="container-fluid bg-1 text-center">
-    	
-    	<img src="{% static 'imgs/Skeletor.png' %}" class="img-responsive img-circle margin" style="display:inline" alt="Skeletor" width="300" height="300">
-    	{% if not user %}
-    		{% include "registration/login.html" %}
-		{% endif %}
-  
-	</div>
+    <div class="container-fluid bg-1 text-center">
+        <img src="{% static 'imgs/Skeletor.png' %}" class="img-responsive img-circle margin" style="display:inline" alt="Skeletor" width="300" height="300">
+        {% if not user.is_authenticated %}
+            {% include "registration/login.html" %}
+        {% endif %}
+    </div>
 {% endblock %}
