--- a/skeletor/gameshop/templates/gameshop/shop_success.html
+++ b/skeletor/gameshop/templates/gameshop/shop_success.html
@@ -10,5 +10,7 @@
 {% endblock %}
 
 {% block content %}
-<iframe id="encoder_iframe" src="{{game.source}}"></iframe>
+<div class="container-fluid bg-1 text-center">
+	Your transaction was successful!
+</div>
 {% endblock %}
