--- a/skeletor/gameshop/templates/gameshop/play.html
+++ b/skeletor/gameshop/templates/gameshop/play.html
@@ -10,5 +10,54 @@
 {% endblock %}
 
 {% block content %}
+<script>
+/* global $ */
+$(document).ready(function() {
+	'use strict';
+	$(window).on('message', function(evt) {
+      //Note that messages from all origins are accepted
+
+      //Get data from sent message
+      var data = evt.originalEvent.data;
+      var messageType=data.messageType;
+      
+      if (messageType==='SCORE') {
+	      //Create a new list item based on the data
+	      var newItem = '\n\t<li>' + (data.messageType || '') + '</li>';
+	      //Add the item to the beginning of the actions list
+	      $('#scores').prepend(newItem);
+	      $.ajax({
+	      	url:'',
+	      	data: {'score': data.score, 'game_id': {{game.id}}},
+	      	type: 'get',
+	      	});
+	  }
+  	else if (messageType==='SAVE') {
+	      //Create a new list item based on the data
+	      var newItem2 = '\n\t<li>' + (data.messageType || '') + '</li>';
+	      //Add the item to the beginning of the actions list
+	      $('#scores').prepend(newItem2);
+  		}
+  	else if (messageType==='LOAD_REQUEST') {
+	      //Create a new list item based on the data
+	      var newItem3 = '\n\t<li>' + (data.messageType || '') + '</li>';
+	      //Add the item to the beginning of the actions list
+	      $('#scores').prepend(newItem3);
+  		}
+  	else if (messageType==='SETTING') {
+	      //Create a new list item based on the data
+	      var newItem4 = '\n\t<li>' + (data.messageType || '') + '</li>';
+	      //Add the item to the beginning of the actions list
+	      $('#scores').prepend(newItem4);
+  		}
+  	else {//Create a new list item based on the data
+	      var newItem5 = '\n\t<li>No message</li>';
+	      //Add the item to the beginning of the actions list
+	      $('#scores').prepend(newItem5);}
+});
+});
+</script>
 <iframe id="encoder_iframe" src="{{game.source}}"></iframe>
+<ul id="scores">
+</ul>
 {% endblock %}
