--- a/skeletor/gameshop/templates/base.html
+++ b/skeletor/gameshop/templates/base.html
@@ -27,6 +27,10 @@
               background-color: #2f2f2f; /* Black Gray */
               color: #fff;
             }
+            .bg-3 {
+                background-color: #F8F8FF; /* Ghost white */
+                color: #ffffff;
+            }
             .container-fluid {
               padding-top: 70px;
               padding-bottom: 70px;
