--- a/skeletor/gameshop/templates/gameshop/game_scores.html
+++ b/skeletor/gameshop/templates/gameshop/game_scores.html
@@ -11,8 +11,8 @@
 	<tbody>
 		{% for score in scores %}
 		<tr>
-			<td>score.user.username</td>
-			<td>score.points</td>
+			<td>{{score.user.username}}</td>
+			<td>{{score.points}}</td>
 		</tr>
 		{% endfor %}
 	</tbody>	
