--- a/skeletor/gameshop/templates/base.html
+++ b/skeletor/gameshop/templates/base.html
@@ -47,6 +47,10 @@
             .controls{
               color:black;
             }
+            #footer {
+                padding-top: 15px;
+                padding-bottom: 15px;
+            }
             
         </style>
         {% block head %}
@@ -60,7 +64,7 @@
       {% endblock %}
         
       <!-- Footer -->
-      <footer class="container-fluid bg-2 text-center">
+      <footer id="footer" class="container-fluid bg-2 text-center">
         <p>Skeletor GameShop made by Amin, Johannes & Matti</p> 
       </footer>
 
