--- a/skeletor/gameshop/templates/gameshop/developer.html
+++ b/skeletor/gameshop/templates/gameshop/developer.html
@@ -10,7 +10,7 @@
 
 {% block content %}
 <div class="container-fluid bg-1 text-center">
-	<form action="" method="POST">
+	<form style="color:red;" action="" method="POST">
 		{% csrf_token %}
 		{{form.as_ul}}
 		<input type='submit' value='Add game'/>
