--- a/skeletor/gameshop/templates/registration/login.html
+++ b/skeletor/gameshop/templates/registration/login.html
@@ -39,6 +39,7 @@
         </div>
         </form>
         {# Assumes you setup the password_reset view in your URLconf #}
+<p><a href="#">Login as developer</a></p>
 <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
 <p><a href="/register">Registeration</a></p>
 </div>
