--- a/skeletor/gameshop/templates/gameshop/developer.html
+++ b/skeletor/gameshop/templates/gameshop/developer.html
@@ -14,6 +14,7 @@
         Games<br>
         {% for game in inventory %}
         {{ game.name }} - {{ game.description }} <a href="/modify/{{ game.id }}">modify</a>
+         <a href="/remove/{{ game.id }}">remove</a>
         <br>
         {% endfor %}
     {% else %}
