--- a/skeletor/gameshop/templates/gameshop/register.html
+++ b/skeletor/gameshop/templates/gameshop/register.html
@@ -13,7 +13,7 @@
     <!-- First Container -->
     <div class="container-fluid bg-1 text-center">
         <div style="background-color:rgba(255, 255, 255, 0.2);padding:20px;">
-        <form action="/register" method="post">
+        <form action="" method="post">
             {% csrf_token %}
             {{ form.as_ul }}
             <input type="submit" value="Submit" />
