--- a/skeletor/gameshop/templates/navigation.html
+++ b/skeletor/gameshop/templates/navigation.html
@@ -7,14 +7,14 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>                       
         </button>
-        <a class="navbar-brand" href="/">SKELETOR GAMESHOP</a>
+        <a class="navbar-brand" href="{% url 'shop:index' %}">SKELETOR GAMESHOP</a>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="/shop">GAME SHOP</a></li>
-          {%if user.is_authenticated %}
+            <li><a href="{% url 'shop:shop' %}">GAME SHOP</a></li>
+            {% if user.is_authenticated %}
             <!--<li><a href="/play">PLAY</a></li>-->
-            <li><a href="/profile">PROFILE</a></li>
+            <li><a href="{% url 'shop:profile' %}">PROFILE</a></li>
             <li><a href="{% url 'logout' %}?next=/">LOGOUT</a></li>
           {% endif %}
         </ul>
