--- a/skeletor/gameshop/templates/404.html
+++ b/skeletor/gameshop/templates/404.html
@@ -11,10 +11,8 @@
 
 {% block content %}
 <div class="container-fluid bg-1 text-center">
-	Your transaction was successful!
-	<br>
-	<a href="{% url 'shop:play' game.id %}">Play</a>
-	<br>
-	<a href="{% url 'shop:shop' %}">Continue shopping</a>
+	<h1>404</h1>
+	<p>OHO SAATANA!</p>
+	<p>Jotakin meni vitun pahasti pieleen!</p>	
 </div>
 {% endblock %}
