--- a/skeletor/gameshop/templates/base.html
+++ b/skeletor/gameshop/templates/base.html
@@ -51,7 +51,10 @@
                 padding-top: 15px;
                 padding-bottom: 15px;
             }
-            
+            th {
+              text-align: center;
+            }
+
         </style>
         {% block head %}
         {% endblock %}
