--- a/skeletor/gameshop/templates/gameshop/play.html
+++ b/skeletor/gameshop/templates/gameshop/play.html
@@ -59,6 +59,10 @@ $(document).ready(function() {
 <div class="container-fluid bg-1 text-center" style="heigth:100%;">
     <div class="row">
         <div class="col-md-8">
+            <div class="text-center">
+                <h1>{{ game.name }}</h1>
+                <p>{{ game.description }}</p>
+            </div>
             <iframe class="bg-3" id="game_iframe" src="{{game.source}}"></iframe>
         </div>
         <div class="col-md-4" id="tableContainer">
