--- a/skeletor/gameshop/templates/gameshop/search.html
+++ b/skeletor/gameshop/templates/gameshop/search.html
@@ -1,4 +1,3 @@
-
 {% extends "base.html" %}
 {% load staticfiles %}
 
@@ -11,10 +10,12 @@
 
 {% block content %}
 <div class="container-fluid bg-1 text-center">
-	Your transaction was successful!
-	<br>
-	<a href="{% url 'shop:play' game.id %}">Play</a>
-	<br>
-	<a href="{% url 'shop:shop' %}">Continue shopping</a>
+	{% if games %}
+		{% for game in games %}
+        {{ game.name }} - {{ game.description }} <br>
+        {% endfor %}
+	{% else %}
+		Game not found. 
+	{% endif %}
 </div>
 {% endblock %}
