--- a/skeletor/gameshop/templates/gameshop/shop.html
+++ b/skeletor/gameshop/templates/gameshop/shop.html
@@ -10,28 +10,51 @@
 
 {% block content %}
 <div class="container-fluid bg-1 text-center">
-    {% if user.is_authenticated %}
-        Logged in as {{ user.username }}.<br>
-    {% endif %}
     {% if games %}
-        Games<br>
-        {% for game in games %}
-        {{ game.name }} - {{ game.description }}
-        {% if game in user.gamer.library.all %}
-        <a href="{% url 'shop:play' game.id %}">Play</a>
-        {% elif user.is_authenticated %}
-            <form action="" method="POST">
-                {% csrf_token %}
-                <input id="id_game_id" name="game_id" type="hidden" value="{{ game.id }}" />
-                <input type='submit' value='Buy'/>
-            </form>
-        {% else %}
-            <a href="{% url 'shop:index' %}">Login to buy games</a>
-        {% endif %}
-        <br>
-        {% endfor %}
+    <div class="table-responsive col-md-8 col-md-offset-2">
+        <h1 class="text-left">GAMES</h1>
+        <table class="table-bordered" style="width:100%;">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Genre</th>
+                    <th>Price</th>
+                    <th>Description</th>
+                    <th>Publisher</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for game in games %}
+                <tr>
+                    <td> {{ game.name }} </td>
+                    <td> {{ game.get_genre_display }} </td>
+                    <td> {{ game.price }} </td>
+                    <td> {{ game.description }} </td>
+                    <td> {{ game.publisher }} </td>
+
+                    {% if game in user.gamer.library.all %}
+                    <td><a href="{% url 'shop:play' game.id %}">Play</a></td>
+                    {% elif user.is_authenticated %}
+                    <td>
+                        <form action="" method="POST">
+                            {% csrf_token %}
+                            <input id="id_game_id" name="game_id" type="hidden" value="{{ game.id }}" />
+                            <input type='submit' value='Buy'/>
+                        </form>
+                    </td>   
+                    {% else %}
+                    <td>
+                    <a href="{% url 'shop:index' %}">Login to buy games</a>
+                    </td>
+                    {% endif %}
+                    {% endfor %}
+                </tr>
+            </tbody>
+        </table>
+    </div>
     {% else %}
-        The store is empty at the moment.
+    The store is empty at the moment.
     {% endif %}
 </div>
 {% endblock %}
