--- a/skeletor/gameshop/templates/navigation.html
+++ b/skeletor/gameshop/templates/navigation.html
@@ -11,6 +11,14 @@
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
+            <form method="post" action="{% url 'shop:search' %}" class="navbar-form navbar-left" role="search">
+              {% csrf_token %}
+              <div class="form-group">
+                <input type="text" class="form-control" name="search" placeholder="Search"/>
+              </div>
+              <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span>
+              </button>
+            </form>  
             <li><a href="{% url 'shop:shop' %}">GAME SHOP</a></li>
             {% if user.developer %}
             <li><a href="{% url 'shop:developer' %}">DEVELOPER</a></li>
