--- a/skeletor/gameshop/templates/base.html
+++ b/skeletor/gameshop/templates/base.html
@@ -61,6 +61,7 @@
     </head>
       <!-- Footer -->
       {% block navigation %}
+      {% include "navigation.html" %}
       {% endblock %}
 
       {% block content %}
