--- a/skeletor/gameshop/templates/gameshop/index.html
+++ b/skeletor/gameshop/templates/gameshop/index.html
@@ -2,11 +2,7 @@
 {% load staticfiles %}
 
 {% block title %}
-    index page
-{% endblock %}
-
-{% block navigation %}
-{% include "navigation.html" %}
+Main page
 {% endblock %}
 
 {% block content %}
