--- a/skeletor/gameshop/templates/gameshop/payment.html
+++ b/skeletor/gameshop/templates/gameshop/payment.html
@@ -2,11 +2,10 @@
 {% load staticfiles %}
 
 {% block title %}
+Payment service
 {% endblock %}
 
-{% block navigation %}
-{% include "navigation.html" %}
-{% endblock %}
+
 
 {% block content %}
 <script>
