--- a/skeletor/gameshop/templates/gameshop/register.html
+++ b/skeletor/gameshop/templates/gameshop/register.html
@@ -3,11 +3,9 @@
 {% load staticfiles %}
 
 {% block title %}
+Register page
 {% endblock %}
 
-{% block navigation %}
-{% include "navigation.html" %}
-{% endblock %}
 
 {% block content %}
     <!-- First Container -->
