--- a/skeletor/gameshop/templates/gameshop/search.html
+++ b/skeletor/gameshop/templates/gameshop/search.html
@@ -2,11 +2,9 @@
 {% load staticfiles %}
 
 {% block title %}
+Search
 {% endblock %}
 
-{% block navigation %}
-{% include "navigation.html" %}
-{% endblock %}
 
 {% block content %}
 <div class="container-fluid bg-1 text-center">
