--- a/skeletor/gameshop/templates/gameshop/developer.html
+++ b/skeletor/gameshop/templates/gameshop/developer.html
@@ -2,11 +2,10 @@
 {% load staticfiles %}
 
 {% block title %}
+Developer profile
 {% endblock %}
 
-{% block navigation %}
-{% include "navigation.html" %}
-{% endblock %}
+
 
 {% block content %}
 <div class="container-fluid bg-1 text-center">
