--- a/skeletor/gameshop/templates/gameshop/profile.html
+++ b/skeletor/gameshop/templates/gameshop/profile.html
@@ -2,11 +2,10 @@
 {% load staticfiles %}
 
 {% block title %}
+Profile
 {% endblock %}
 
-{% block navigation %}
-{% include "navigation.html" %}
-{% endblock %}
+
 
 {% block content %}
 <div class="container-fluid bg-1 text-center">
