--- a/skeletor/gameshop/templates/gameshop/shop.html
+++ b/skeletor/gameshop/templates/gameshop/shop.html
@@ -2,11 +2,9 @@
 {% load staticfiles %}
 
 {% block title %}
+Game shop
 {% endblock %}
 
-{% block navigation %}
-{% include "navigation.html" %}
-{% endblock %}
 
 {% block content %}
 <div class="container-fluid bg-1 text-center">
@@ -32,22 +30,25 @@
                     <td> {{ game.price }} </td>
                     <td> {{ game.description }} </td>
                     <td> {{ game.publisher }} </td>
-
                     {% if game in user.gamer.library.all %}
-                    <td><a href="{% url 'shop:play' game.id %}">Play</a></td>
+                    <td>
+                        <a href="{% url 'shop:play' game.id %}"><span class="btn btn-default">Play</span></a>
+                    </td>
                     {% elif user.is_authenticated %}
                     <td>
                         <form action="" method="POST">
                             {% csrf_token %}
                             <input id="id_game_id" name="game_id" type="hidden" value="{{ game.id }}" />
-                            <input type='submit' value='Buy'/>
+                            <button type="submit" class="btn btn-default">{{game.price}}<span class="glyphicon glyphicon-euro"></span>
+                            </button>
                         </form>
                     </td>   
                     {% else %}
                     <td>
-                    <a href="{% url 'shop:index' %}">Login to buy games</a>
+                        <a href="{% url 'shop:index' %}"><span class="btn btn-default glyphicon glyphicon-log-in"></span></a>
                     </td>
                     {% endif %}
+
                     {% endfor %}
                 </tr>
             </tbody>
@@ -58,3 +59,4 @@
     {% endif %}
 </div>
 {% endblock %}
+
