--- a/skeletor/gameshop/templates/navigation.html
+++ b/skeletor/gameshop/templates/navigation.html
@@ -27,6 +27,8 @@
             <!--<li><a href="/play">PLAY</a></li>-->
             <li><a href="{% url 'shop:profile' %}">PROFILE</a></li>
             <li><a href="{% url 'logout' %}?next=/">LOGOUT</a></li>
+            {% else %}
+            <li><a href="{% url 'login' %}">LOGIN</a></li>
           {% endif %}
         </ul>
       </div>
